--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "george-flefel-react-portfolio",
   "version": "1.0.0",
   "description": "Personal portfolio app built in React.",
-    "scripts": {
+  "scripts": {
     "preinstall": "npm set audit false",
     "start": "webpack-dev-server --config webpack/dev.config.js --watch",
     "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js --progress --display-error-details --color",
@@ -34,7 +34,7 @@
   "dependencies": {
     "ajv": "6.12.0",
     "autoprefixer": "^9.1.0",
-    "axios": "0.21.1",
+    "axios": "^0.21.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
