--- a/backups/package.json
+++ b/backups/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "ajv": "6.12.0",
     "autoprefixer": "^9.1.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
@@ -44,10 +44,10 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^10.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "eslint": "^4.2.0",
+    "eslint": "^8.3.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.1.0",
     "express": "4.17.1",
@@ -56,7 +56,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "moment": "^2.29.1",
-    "node-sass": "^4.13.1",
+    "node-sass": "^6.0.1",
     "postcss-loader": "^2.1.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -67,10 +67,10 @@
     "redux": "4.0.5",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "webpack": "4.42.1",
-    "webpack-cli": "3.3.11",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
     "webpack-dev-middleware": "3.7.2",
-    "webpack-dev-server": "3.10.3",
+    "webpack-dev-server": "^4.6.0",
     "webpack-hot-middleware": "2.25.0",
     "webpack-merge": "4.2.2"
   },
